# video-compression

./: .gitignore  USER_GUIDE.md  pyproject.toml  verify_timestamps.py
prompts/: initial-requirements.md  widen-scope.md
src/organising_tools/: cli.py  utils.py
src/organising_tools/commands/: dates.py  favorites.py  image.py  video.py
src/video_compressor/: compressor.py  main.py  utils.py
src/video_compressor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
