[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-compressor"
version = "0.1.0"
description = "Batch video compression CLI tool using FFmpeg"
requires-python = ">=3.8"
dependencies = [
    "click",
    "rich",  # For pretty progress bars and logging
    "questionary", # For interactive menus
    "wakepy",  # Cross-platform sleep prevention
]

[project.scripts]
video-compress = "video_compressor.main:cli"
